tests/fixtures/invalid/float_in_bool.py
# Cannot use 'in' with Float and Bool
x: bool = 1.0 in True
